# OmniHelp

./: .dockerignore  .gitattributes  .gitignore  DOCKER.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  docker.bat  docker.ps1  main.py  pyproject.toml  start-dev.ps1  start-dev.sh
services/backend/: .dockerignore  Dockerfile  requirements-dev.txt  requirements.txt  test-ingest.html
services/backend/app/api/: app.py
services/backend/app/notebooks/: filesystem-mcp.py  notebook.ipynb  rag_and_fs_mcp.py  streaming.py
services/backend/app/notebooks/mcp_workspace/: test.txt
services/backend/app/notebooks/rag_mcp/: answer.txt
services/backend/app/rag/: __init__.py  agent_tools.py  data_ingestion.py  graph_builder.py  pdf_handler.py  rag_manager.py  rag_pipeline.py  retriever.py  vectorstore.py
services/backend/app/rag/agent/: __init__.py  agent_tools.py  graph_builder.py  query_enhancer.py  rag_state.py  react_node.py
services/backend/app/rag/core/: __init__.py  config.py  data_ingestion.py  database.py  embedder.py  hybrid_retriever.py  metrics.py  pdf_handler.py  rag_manager.py  rag_pipeline.py  retriever.py  storage.py  utils.py  vectorstore.py
services/backend/tests/: conftest.py  test_api.py  test_config.py  test_embedder.py  test_retriever.py  test_vectorstore.py
services/frontend/multirag/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  jest.config.js  jest.setup.js  package-lock.json  package.json
services/frontend/multirag/src/app/: globals.css  layout.tsx  page.tsx
(+25 files in other folders)
