[project]
name = "lifeforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.2.1",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.120.1",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "ipython>=9.6.0",
    "jq>=1.10.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.0.10",
    "langchain-groq>=0.3.8",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.35",
    "langgraph>=1.0.1",
    "langsmith>=0.4.38",
    "mcp[cli]>=1.22.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "pymupdf>=1.26.5",
    "pypdf>=6.1.3",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.1.2",
    "tiktoken>=0.12.0",
    "unstructured>=0.18.15",
    "uvicorn>=0.38.0",
]
